# asteroids-game

./: .gitignore  LICENSE  README.md  asteroid.py  circleshape.py  constants.py  main.py  player.py  pyproject.toml  shot.py
