[project]
name = "asteroids-game"
version = "0.1.0"
description = "A Python recreation of the classic Asteroids arcade game using Pygame, featuring player-controlled spaceship, asteroid splitting, and modular game logic."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pygame==2.6.1"]
